--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href="https://www.instagram.com/moch_kiscoot/"><img src="images/IG2.gif" style="height: 100px;width: 120px;" alt=""/></a>
 					<a href="https://www.facebook.com/kiki.vespa.1/"><img src="images/fb.gif" style="height: 130px;width: 180px;" alt=""/></a>
 					<a href="https://www.linkedin.com/in/muhammad-rifki-408641119/"><img src="images/Linkedin.gif" style="height: 130px;width: 180px;" alt=""/></a>
-					<a href="moh.rifki29@gmail.com"><img src="images/gmail.gif" style="height: 100px;width: 150px;" alt=""/></a>
+					<a href="mailto:moh.rifki29@gmail.com"><img src="images/gmail.gif" style="height: 100px;width: 150px;" alt=""/></a>
 					
 				</div>
 
