--- a/index.html
+++ b/index.html
@@ -251,7 +251,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="works-section" id="work" id="work">
 	   <div class="works-header">
 			<h3>Experience</h3>
-				<p>I hold a bachelor degree of Information System from Trisakti University. I joined a tableau course about "Data Analytics using Tableau".<p>I have experience as data report and data analyst for 7 years.</p>
+				<p>I hold a bachelor degree of Information System from Trisakti University. I joined a tableau course about "Data Analytics using Tableau".<br> <b>I have experience as data report and data analyst for 7 years.<b>
+		<div class="text-center mt-4" style="background-color: white;width:200px;margin-left: 500px;">
+                    <a class="btn btn-xl btn-outline-light" href="CV-Rifki.pdf" target="_blank">
+                        <i class="fas fa-download me-2"></i>
+                        Download CV
+                    </a>
+                </div>
 		</div>
 		<div class="portfolio-section-bottom-row" id="portfolio">
 			<div class="container">
@@ -512,7 +518,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="container"> 
 			<div class="contact-header">
 				<h3> contact</h3>
-					<p>Feel free to ask me via my email and phone number or you can visit my social media via Instagram, Facebook and Linkedin below: </p>
+					<p>Feel free to ask me via my email or you can visit my social media via Instagram, Facebook and Linkedin below: </p>
 			</div>
 			<div class="services-sectiongrids" style="margin-right: -2000px;">
 				<div class="col-md-4 services-grid">
@@ -528,26 +534,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href="#contact" class="scroll"><img src="images/arrow1.png" alt=""/></a>
 					</div>
 		</div>
-			<div class="contact">
-				<form>
-					<div class="col-md-4 contactgrid">
-						<input type="text" class="text" value=" name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = ' name';}">
-					</div>
-					<div class="col-md-4 contactgrid">
-						<input type="text" class="text" value="email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'email';}">
-					</div>
-					<div class="col-md-4 contactgrid">
-						<input type="text" class="text" value="phone" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'phone';}">
-					</div>
-					<div class="col-md-8 contactgrid1">
-						<textarea onfocus="if(this.value == 'Your Message') this.value='';" onblur="if(this.value == '') this.value='Your Message';" >Your Message</textarea>
-					</div>
-					<div class="col-md-4 contactgrid2">
-						<input type="submit" value="[send message]">
-					</div>
-				   <div class="clearfix"></div>
-				</form>
-			</div>
+			
 			<div class="footer-bottom">
 
 					<p>&copy; 2015 Onepage . All rights  Reserved | Template by<a href="http://templatestock.com" target="target_blank">Template Stock</a></p>
